try again to fix height on mobile

--- a/src/pages/EmailVerified/EmailVerified.css
+++ b/src/pages/EmailVerified/EmailVerified.css
@@ -20,7 +20,7 @@
 }
 
 .emailVerified__container{
-  height: 100%;
+  height: calc(var(--vh, 1vh) * 100);
   padding: 20%;
   display: flex;
   flex-direction: column;
