--- a/src/pages/Home/ListRow/ListRow.css
+++ b/src/pages/Home/ListRow/ListRow.css
@@ -24,7 +24,7 @@
     width: 2rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
-    height: 100%;
+    height: calc(var(--vh, 1vh) * 100);
     display: inline-block;
     text-align: center;
 }
